[VARKA] Task 23: corrections from the branch review of the single-flight gate
Two findings, both verified against the source before being acted on.

1. The failure path completed the future before unregistering it, so a loser
woken by the failure retried straight back into the dead future: putIfAbsent
returned the future still registered in the map, get() rethrew immediately, and
the loser spun - allocating a CompletableFuture and filling an ExecutionException
stack trace per pass - until the winner was rescheduled onto its next statement.
On a loaded executor that window is a full quantum, and cancellation storms are
exactly the case SPARK-43300 exists for, so it is the worst place to spin.
Unregistering first means the woken loser installs its own future or joins a live
successor's. The javadoc now gives both orderings and the reason each is what it
is; it previously reasoned about the success path only, where completing first is
correct because the future carries a value.

No test accompanies this: the fix changes how long a loser spins, not what any
caller observes, so nothing deterministic can catch it. The failure-isolation
test added with the gate still covers the semantics.

2. executionsFor is documented as a read but bumps the entry's recency. Guava
33.6.0's LocalCache.Segment.compute takes a "no change in weight" path when the
remapping function returns the same instance, and that path calls recordWrite, so
a diagnostics sweep over many hashes reorders the bounded side table. Left as is
and documented rather than changed: the copy is taken inside computeIfPresent
precisely because the LinkedHashSet is not thread-safe and recordExecution
mutates it under that same segment lock, so the suggested getIfPresent plus an
unsynchronized walk would reinstate the race the task-18 debt sweep removed.
Reordering eviction in a diagnostics table with no removal listener is the
accepted price of an atomic copy.

Also, a guard the port dropped: List.copyOf rejects nulls,